--- a/Unforkdd/RegistratiePagina.xaml
+++ b/Unforkdd/RegistratiePagina.xaml
@@ -4,10 +4,21 @@
              x:Class="Unforkdd.RegistratiePagina"
              Title="RegistratiePagina"
              NavigationPage.HasNavigationBar="False">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+    <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="Fill" Margin="10">
+        <!--username en password-->
+        <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="Fill" Margin="0,0,20,0">
+            <Label Text="Choose Username" HorizontalOptions="Center"/>
+            <Entry x:Name="Username" Placeholder="Username" />
+            <Label Text="Choose Password" HorizontalOptions="Center" />
+            <Entry x:Name="ChoosPasswordEntry" Placeholder="Password" />
+            <Label Text="Repeat Password" HorizontalOptions="Center"/>
+            <Entry x:Name="ChoosPasswordEntrySecond" Placeholder="Repeat Password"/>
+        </StackLayout>
+        <!--button register-->
+        <StackLayout HorizontalOptions="CenterAndExpand" >
+            <Button Text="Registreren" Clicked="Button_Clicked" Margin="0,10"/>
+        </StackLayout>
+    </StackLayout>
+    
 </ContentPage>
