--- a/Unforkdd/WachtwoordResetPagina.xaml
+++ b/Unforkdd/WachtwoordResetPagina.xaml
@@ -3,10 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Unforkdd.WachtwoordResetPagina"
              Title="WachtwoordResetPagina">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    
+    <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="Fill" Margin="10">
+        <!--username-->
+        <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="Fill" Margin="0,0,20,0">
+            <Label Text="Choose Username" HorizontalOptions="Center"/>
+            <Entry x:Name="Username" Placeholder="Username" />
+        </StackLayout>
+        <!--button reset password-->
+        <StackLayout HorizontalOptions="CenterAndExpand" >
+            <Button Text="Reset" Clicked="Button_Clicked" Margin="0,10"/>
+        </StackLayout>
+    </StackLayout>
+    
 </ContentPage>
