--- a/Unforkdd/LoginPagina.xaml
+++ b/Unforkdd/LoginPagina.xaml
@@ -5,22 +5,31 @@
              Title="Login Pagina"
              NavigationPage.HasNavigationBar="False">
     <!--background image als het nodig is-->
-    <!--<ContentPage.BackgroundImageSource>
-        <FileImageSource File="./Resources/Images/person.png" />
-    </ContentPage.BackgroundImageSource>-->
+    <ContentPage.BackgroundImageSource>
+        <FileImageSource File="./Resources/Images/bg_person.png" />
+    </ContentPage.BackgroundImageSource>
 
-    <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="Fill" Margin="10">
-        <!--username en password-->
-        <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="Fill" Margin="0,0,20,0">
+    <StackLayout ClassId="bigStack" VerticalOptions="Fill" HorizontalOptions="Fill" BackgroundColor="{StaticResource CustomColor}">
+        
+        <!--username en password , Button login-->
+        <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="Fill" Margin="10">
             <Entry x:Name="UsernameEntry" Placeholder="Username" />
             <Entry x:Name="PasswordEntry" Placeholder="Password" IsPassword="True"/>
+            <Button Text="Login" Clicked="OnLoginClicked" HorizontalOptions="CenterAndExpand" WidthRequest="150"/>
         </StackLayout>
+
         <!--buttons login,register,password-->
-        <StackLayout HorizontalOptions="CenterAndExpand" >
-            <Button Text="Login" Clicked="OnLoginClicked" Margin="0,10"/>
-            <Button Text="Wachtwoord vergeten" Clicked="OnForgotPasswordClicked" Margin="0,10"/>
-            <Button Text="Registreren" Clicked="OnRegisterClicked" Margin="0,10"/>
+        <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="End">
+            <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
+                <Button Text="Wachtwoord vergeten" Clicked="OnForgotPasswordClicked" Margin="10" BorderWidth="3" BackgroundColor="Transparent" TextColor="black">
+                    <Button.BorderColor>
+                        <DynamicResource Key="Primary" />
+                    </Button.BorderColor>
+                </Button>
+                <Button Text="Registreren" Clicked="OnRegisterClicked" Margin="10"/>
+            </StackLayout>
         </StackLayout>
+
     </StackLayout>
 
 </ContentPage>
