--- a/Unforkdd/LoginPagina.xaml
+++ b/Unforkdd/LoginPagina.xaml
@@ -15,7 +15,7 @@
         <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="Fill" Margin="10">
             <Entry x:Name="UsernameEntry" Placeholder="Username" TextColor="Black" PlaceholderColor="Black"/>
             <Entry x:Name="PasswordEntry" Placeholder="Password" IsPassword="True" TextColor="Black" PlaceholderColor="Black"/>
-            <Button Text="Login" Clicked="OnLoginClicked" HorizontalOptions="CenterAndExpand" WidthRequest="150"/>
+            <Button Text="Login" Clicked="OnLoginClicked" HorizontalOptions="CenterAndExpand" WidthRequest="150" Margin="10"/>
         </StackLayout>
 
         <!--buttons login,register,password-->
