login pagina placeholder text nu hetzelfde als registratieP

--- a/Unforkdd/LoginPagina.xaml
+++ b/Unforkdd/LoginPagina.xaml
@@ -13,8 +13,8 @@
         
         <!--username en password , Button login-->
         <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="Fill" Margin="10">
-            <Entry x:Name="UsernameEntry" Placeholder="Username" TextColor="Black" PlaceholderColor="Black"/>
-            <Entry x:Name="PasswordEntry" Placeholder="Password" IsPassword="True" TextColor="Black" PlaceholderColor="Black"/>
+            <Entry x:Name="UsernameEntry" Placeholder="Username" TextColor="Black" PlaceholderColor="Gray"/>
+            <Entry x:Name="PasswordEntry" Placeholder="Password" IsPassword="True" TextColor="Black" PlaceholderColor="Gray"/>
             <Button Text="Login" Clicked="OnLoginClicked" HorizontalOptions="CenterAndExpand" WidthRequest="150" Margin="10"/>
         </StackLayout>
 
